--- a/index.html
+++ b/index.html
@@ -434,6 +434,28 @@
    </section>
    <!--Section End-->
 
+   <!--Section Start-->
+   <section class="pq-home2-about">
+      <div class="container">
+         <div class="row align-items-center">
+            <div class="col-lg-12 mt-4 mt-lg-0">
+               <div class="pq-section pq-style-1 text-left"> <span class="pq-section-sub-title">What we do</span>
+                  <h5 class="pq-section-title" style="color: #4C906F; font-size:40px; ">ENT Consultation, Surgeries &
+                     Treatment</h5>
+                  <p class="pq-section-description">MedFirst ENT Centre was established in 1997. Since then it has
+                     undergone regular improvements and upgradation to become a centre of excellence for the diagnosis and
+                     management of ENT disorders in the NCR. We get  patients from all over
+                     India and overseas as well.<br>We offer the latest technology and equipment and expertise in the
+                     management of ENT
+                     diseases.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <!--Section End-->
+
    <section>
       <div class="container text-center mt-4">
          <h3 class="fw-bold">ALL ENT SURGERIES</h3>
@@ -846,7 +868,7 @@
                <div class="col-lg-12">
                   <!-- <div class="pq-subscribe-block"> -->
                   <div class="pq-subscribe-details">
-                     <h5 class="text-white">Subs To News Letter</h5>
+                     <h5>Subs To News Letter</h5>
                      <p>Consetetur dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                         ut labore et dolore magna</p>
                   </div>
