--- a/test.html
+++ b/test.html
@@ -466,6 +466,29 @@
     </section>
     <!--Section End-->
 
+    <!--Section Start-->
+    <section class="pq-home2-about">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-12 mt-4 mt-lg-0">
+                    <div class="pq-section pq-style-1 text-left"> <span class="pq-section-sub-title">What we do</span>
+                        <h5 class="pq-section-title" style="color: #4C906F; font-size:40px; ">ENT Consultation, Surgeries & Treatment</h5>
+                        <p class="pq-section-description">MedFirst ENT Centre was established in 1997. Since then it has undergone regular improvements and upgradation to become a centre of excellence for the diagnosis and management of ENT disorders in the NCR. We get  patients from all over
+                        India and overseas as well.<br>We offer the latest technology and equipment and expertise in the management of ENT
+                        diseases.
+                        </p>
+                    </div>
+    
+                    <a class="pq-button pq-button-flat" href="about-us.html">
+                        <div class="pq-button-block"> <span class="pq-button-text">Read More</span> <i
+                                class="ion ion-plus-round"></i> </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Section End-->
+
 
 
     <div class="container text-center mt-4">
